--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "clean": "rimraf dist",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src --ext .ts",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
     "orcdkestrator",
     "plugin",
-    "dotenv", "environment", "variables", "config", "orchestration"
+    "dotenv",
+    "environment",
+    "variables",
+    "config",
+    "orchestration"
   ],
   "repository": {
     "type": "git",
