--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
+    - name: Install peer dependencies
+      run: npm install @orcdkestrator/core@latest --no-save
+    
     - name: Run linter
       run: npm run lint
     
